# gsi_sim

./: .gitignore  Compile_gsi_sim.sh  Makefile.am  Makefile.in  README.md  build_script.sh  configure  configure.ac  gsi_sim-Darwin  gsi_sim-Linux  gsi_sim-MINGW32_NT-6.1
src/: gsi_sim.c
test_data/: geno-match-example-data.txt  snp349_baseline.txt  snp349_mixture.txt
xcode/gsi_sim/gsi_sim.xcodeproj/: eriq.mode1v3  eriq.pbxuser  project.pbxproj
